fix: redundant line breaks in trace messages

--- a/lean4-infoview/src/infoview/index.css
+++ b/lean4-infoview/src/infoview/index.css
@@ -58,6 +58,9 @@ body {
 }
 
 /* Interactive traces */
+.trace-line {
+    display: inline-block;
+}
 .trace-line:hover {
     background-color: #dbeeff;
 }
